--- a/tests/cassettes/test_iac_scan_multiple_vulnerabilities.yaml
+++ b/tests/cassettes/test_iac_scan_multiple_vulnerabilities.yaml
@@ -30,7 +30,7 @@ interactions:
       User-Agent:
       - pygitguardian/1.3.4 (Darwin;py3.10.4) ggshield
     method: POST
-    uri: https://api.gitguardian.com/v1/iacscan
+    uri: https://api.gitguardian.com/v1/iac_scan
   response:
     body:
       string: '{"id":"","type":"path_scan","iac_engine_version":"1.1.0","entities_with_incidents":[{"filename":"iac_file_multiple_vulnerabilities.tf","incidents":[{"policy":"Unrestricted
